<resources>
    <string name="app_name">LocMess</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_posts">Posts</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <!-- Strings related to Create Post -->
    <string name="title_activity_create_post">New Post</string>
    <string name="tittle">Tittle</string>
    <string name="content">Content</string>
    <string name="contact">Contact</string>
    <string name="time">Time</string>
    <string name="next">Next</string>

    <!-- Strings related to Create Post -->
    <string name="title_activity_location_option">Post Location</string>
    <string name="location">Location</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi_direct">Wifi-Direct</string>

    <!-- Strings related to Create Post -->
    <string name="title_activity_restrition_option">Post Retrition</string>
    <string name="everyone">Everyone</string>
    <string name="white_list">White List</string>
    <string name="black_list">Black List</string>
    <string name="post_summary">Post Summary</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>

</resources>
