<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pt.ulisboa.tecnico.cmov.locmess.LocationOptionActivity"
    tools:showIn="@layout/activity_location_option">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/location" />

            <RadioButton
                android:id="@+id/radioButton_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wifi" />

            <RadioButton
                android:id="@+id/radioButton_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bluetooth" />

            <RadioButton
                android:id="@+id/radioButton_wifi_direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wifi_direct" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15.73"
            android:orientation="vertical"
            android:visibility="visible">

            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="332dp"
                mapbox:mapbox_cameraTargetLat="38.7378954"
                mapbox:mapbox_cameraTargetLng="-9.1378972"
                mapbox:mapbox_cameraZoom="15"
                mapbox:mapbox_myLocation="true"
                mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
                mapbox:mapbox_uiAttribution="false"
                mapbox:mapbox_uiLogo="false">

            </com.mapbox.mapboxsdk.maps.MapView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekBar_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:progress="50" />

                <TextView
                    android:id="@+id/text_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="250m" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_wifi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="WIFI_SSID"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BLUETOOTH"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_wifi_direct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="WIFI_DIRECT"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
